samples/_failures_safe/1761001863_92adb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_136417bc.c: In function ‘main’:
./samples/SAFE/__tmp_136417bc.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_136417bc.c:139:9: error: expected declaration or statement at end of input
  139 |         if
      |         ^~
./samples/SAFE/__tmp_136417bc.c:139:9: error: expected declaration or statement at end of input
